force-app/main/default/objects/Commercial_Approvers__c/Commercial_Approvers__c.object-meta.xml
<CustomObject>
    <label>Commercial Approver</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Commercial Approvers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>