force-app/main/default/objects/Commercial_Approvers__c/fields/Inside_Sales_Approver__c.field-meta.xml
<CustomField>
    <fullName>Inside_Sales_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Sales Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commercial_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>