force-app/main/default/objects/Commercial_Approvers__c/fields/Partner_Rep_Code_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Rep_Code_Account__c</fullName>
    <label>Partner (Rep Code) Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please limit your selections to Partner accounts</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Partner &amp; House Account</value>
        </filterItems>
        <filterItems>
            <field>Account.Rep_Code__c</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </filterItems>
        <infoMessage>Please chose Rep Code (Partner) Accounts</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Commercial Approvers</relationshipLabel>
    <relationshipName>Commercial_Approvers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>