force-app/main/default/objects/Commercial_Approvers__c/fields/Sales_Executive_Approver__c.field-meta.xml
<CustomField>
    <fullName>Sales_Executive_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Executive Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commercial_Approvers2</relationshipName>
    <type>Lookup</type>
</CustomField>