force-app/main/default/objects/Commercial_Approvers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>External_ID__c</columns>
    <columns>Brand__c</columns>
    <columns>Partner_Rep_Code_Account__c</columns>
    <columns>Inside_Sales_Approver__c</columns>
    <columns>Regional_Manager__c</columns>
    <columns>Sales_Director_Approver__c</columns>
    <columns>Sales_Executive_Approver__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Executive_Approver__c</field>
        <operation>contains</operation>
        <value>steve</value>
    </filters>
    <label>All</label>
</ListView>